[tool.poetry]
name = "moneyback"
version = "0.1.0"
description = ""
authors = ["nacro90 <orcan.tiryakioglu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
scipy = "^1.6.1"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
ta = "^0.7.0"
Quandl = "^3.6.0"
yfinance = "^0.1.55"
plotly = "^4.14.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
